force-app/main/default/objects/Patient__c/fields/Patient_Name1__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name1__c</fullName>
    <label>Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Patients (Doctor)</relationshipLabel>
    <relationshipName>Patients1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>