force-app/main/default/objects/Patient__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <label>Patient_Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>