force-app/main/default/objects/Patient__c/recordTypes/First_User.recordType-meta.xml
<RecordType>
    <fullName>First_User</fullName>
    <active>true</active>
    <label>First User</label>
</RecordType>