force-app/main/default/objects/Patient__c/recordTypes/Second_User.recordType-meta.xml
<RecordType>
    <fullName>Second_User</fullName>
    <active>true</active>
    <label>Second User</label>
</RecordType>